# python-template-for-claude-code

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
scripts/: setup.sh
src/project_name/: __init__.py
template/src/template_package/utils/: helpers.py  logging_config.py
tests/: conftest.py
